tests/neg/semantic_const_reassign.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: لا يمكن إعادة إسناد الثابت
// EXPECT: استخدم متغيراً غير ثابت
صحيح الرئيسية() {
    ثابت صحيح س = 1.
    س = 2.
    إرجع 0.
}
